Major revision has changed because of breaking changes in FreeAIr properties. Now you can control FreeAIr via its Control Center. Added multiagent support. Added chat chosen agent.

--- a/FreeAIr/UI/NestedCheckBox/NestedCheckBoxList.xaml
+++ b/FreeAIr/UI/NestedCheckBox/NestedCheckBoxList.xaml
@@ -22,6 +22,7 @@
                         <CheckBox
                             IsChecked="{Binding IsChecked, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             Focusable="False"
+                            IsEnabled="{Binding IsEnabled}"
                             >
                             <ContentControl>
                                 <StackPanel
