--- a/FreeAIr/UI/ToolWindows/NaturalLanguageOutlinesToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/NaturalLanguageOutlinesToolWindowControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="FreeAIr.UI.ToolWindows.NaturalLanguageResultsToolWindowControl"
+    x:Class="FreeAIr.UI.ToolWindows.NaturalLanguageOutlinesToolWindowControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -14,10 +14,10 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="300"
-    Name="NaturaLanguageResultsName"
+    Name="NaturalLanguageCommentsName"
     >
     <UserControl.Resources>
-        <DoubleCollection x:Key="Proportions">3,14,2,1</DoubleCollection>
+        <DoubleCollection x:Key="Proportions">2,5,10,14,2</DoubleCollection>
     </UserControl.Resources>
 
     <Grid>
@@ -42,29 +42,44 @@
                 Content="{Binding Status}"
                 />
 
-            <Button
+            <StackPanel
                 Grid.Column="1"
-                Width="0"
-                Visibility="Collapsed"
-                x:Name="StyleButtonName"
+                Orientation="Horizontal"
                 HorizontalAlignment="Right"
-                VerticalAlignment="Center"
-                Content="Cancel chat"
-                toolkit:Themes.UseVsTheme="True"
-                />
-            <Button
-                Grid.Column="1"
-                HorizontalAlignment="Right"
-                Margin="5,0,5,0"
-                Content="Cancel chat"
-                VerticalAlignment="Center"
-                Command="{Binding ElementName=NaturaLanguageResultsName, Path=DataContext.CancelChatCommand}"
-                CommandParameter="{Binding}"
-                Style="{DynamicResource TextBlockLikeButtonStyle}"
-                />
+                >
+
+                <Button
+                    Width="0"
+                    Visibility="Collapsed"
+                    x:Name="StyleButtonName"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Content="Cancel chat"
+                    toolkit:Themes.UseVsTheme="True"
+                    />
+
+                <Button
+                    Margin="5,0,25,0"
+                    Content="Apply"
+                    VerticalAlignment="Center"
+                    Command="{Binding ElementName=NaturalLanguageCommentsName, Path=DataContext.ApplyCommand}"
+                    CommandParameter="{Binding}"
+                    Style="{DynamicResource TextBlockLikeButtonStyle}"
+                    />
+
+                <Button
+                    Margin="5,0,5,0"
+                    Content="Cancel chat"
+                    VerticalAlignment="Center"
+                    Command="{Binding ElementName=NaturalLanguageCommentsName, Path=DataContext.CancelChatCommand}"
+                    CommandParameter="{Binding}"
+                    Style="{DynamicResource TextBlockLikeButtonStyle}"
+                    />
+
+            </StackPanel>
 
         </Grid>
-        
+
         <ScrollViewer
             Grid.Row="1"
             VerticalScrollBarVisibility="Auto"
@@ -72,7 +87,7 @@
             <ListView
                 Margin="2"
                 HorizontalAlignment="Stretch"
-                ItemsSource="{Binding FoundItems}"
+                ItemsSource="{Binding GeneratedComments}"
                 Foreground="White"
                 Background="Transparent"
                 >
@@ -122,7 +137,7 @@
                                                         VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                                         />
                                                 </Border>
-                                                
+
                                                 <Thumb
                                                     Grid.Column="1"
                                                     x:Name="PART_HeaderGripper"
@@ -137,6 +152,22 @@
                             </Style>
                         </GridView.ColumnHeaderContainerStyle>
 
+                        <GridViewColumn Header="Apply" Width="120">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <CheckBox
+                                        Margin="0,5,0,5"
+                                        HorizontalAlignment="Center"
+                                        Content=""
+                                        Background="Transparent"
+                                        IsChecked="{Binding Apply, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                        toolkit:Themes.UseVsTheme="True"
+                                        >
+                                    </CheckBox>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        
                         <GridViewColumn Header="File Name" Width="120">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
@@ -150,7 +181,7 @@
                                         >
                                         <Label.InputBindings>
                                             <MouseBinding
-                                                Command="{Binding ElementName=NaturaLanguageResultsName, Path=DataContext.GotoCommand}"
+                                                Command="{Binding ElementName=NaturalLanguageCommentsName, Path=DataContext.GotoCommand}"
                                                 CommandParameter="{Binding}"
                                                 MouseAction="LeftClick"
                                                 />
@@ -160,62 +191,36 @@
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
 
-                        <GridViewColumn Header="Found text" Width="120">
+                        <GridViewColumn Header="Commented Line" Width="120">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <Grid
+                                    <TextBlock
+                                        Grid.Row="0"
+                                        Text="{Binding CommentedLine}"
+                                        TextWrapping="Wrap"
                                         HorizontalAlignment="Left"
-                                        x:Name="FoundItemGrid"
+                                        Foreground="#569CD6"
+                                        Background="Transparent"
+                                        Cursor="Hand"
                                         >
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition/>
-                                            <RowDefinition/>
-                                        </Grid.RowDefinitions>
-                                        <TextBlock
-                                            Grid.Row="0"
-                                            Text="{Binding FoundText}"
-                                            TextWrapping="Wrap"
-                                            HorizontalAlignment="Left"
-                                            Foreground="#569CD6"
-                                            Background="Transparent"
-                                            Cursor="Hand"
-                                            >
-                                            <TextBlock.InputBindings>
-                                                <MouseBinding
-                                                    Command="{Binding ElementName=NaturaLanguageResultsName, Path=DataContext.GotoCommand}"
-                                                    CommandParameter="{Binding ElementName=FoundItemGrid, Path=DataContext}"
-                                                    MouseAction="LeftClick"
-                                                    />
-                                            </TextBlock.InputBindings>
-                                        </TextBlock>
-                                        <TextBlock
-                                            Grid.Row="1"
-                                            Text="{Binding Reason}"
-                                            TextWrapping="Wrap"
-                                            HorizontalAlignment="Left"
-                                            Foreground="Gray"
-                                            Background="Transparent"
-                                            Cursor="Hand"
-                                            >
-                                            <TextBlock.InputBindings>
-                                                <MouseBinding
-                                                    Command="{Binding ElementName=NaturaLanguageResultsName, Path=DataContext.GotoCommand}"
-                                                    CommandParameter="{Binding ElementName=FoundItemGrid, Path=DataContext}"
-                                                    MouseAction="LeftClick"
-                                                    />
-                                            </TextBlock.InputBindings>
-                                        </TextBlock>
-                                    </Grid>
+                                        <TextBlock.InputBindings>
+                                            <MouseBinding
+                                                Command="{Binding ElementName=NaturalLanguageCommentsName, Path=DataContext.GotoCommand}"
+                                                CommandParameter="{Binding}"
+                                                MouseAction="LeftClick"
+                                                />
+                                        </TextBlock.InputBindings>
+                                    </TextBlock>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
 
-                        <GridViewColumn Header="Confidence" Width="70">
+                        <GridViewColumn Header="Comment" Width="120">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <Label
                                         HorizontalAlignment="Center"
-                                        Content="{Binding ConfidenceLevel}"
+                                        Content="{Binding Comment}"
                                         Background="Transparent"
                                         Foreground="White"
                                         />
