Going to NL search with RAG. Step 5.

--- a/FreeAIr/UI/NestedCheckBox/NestedCheckBoxList.xaml
+++ b/FreeAIr/UI/NestedCheckBox/NestedCheckBoxList.xaml
@@ -28,6 +28,7 @@
                         <CheckBox
                             IsChecked="{Binding IsChecked, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             Focusable="False"
+                            IsEnabled="{Binding IsEnabled}"
                             >
                             <CheckBox.Foreground>
                                 <PriorityBinding>
