--- a/FreeAIr/UI/ToolWindows/BuildNaturalLanguageOutlinesTreeToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/BuildNaturalLanguageOutlinesTreeToolWindowControl.xaml
@@ -119,7 +119,7 @@
                 >
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
+                        <Grid Margin="0,5,0,5">
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
                                 <RowDefinition/>
@@ -157,7 +157,7 @@
                 >
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
+                        <Grid Margin="0,5,0,5">
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
                                 <RowDefinition/>
