--- a/FreeAIr/UI/ToolWindows/BuildNaturalLanguageOutlinesTreeToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/BuildNaturalLanguageOutlinesTreeToolWindowControl.xaml
@@ -96,6 +96,7 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
@@ -193,7 +194,45 @@
                 Style="{DynamicResource TextBlockLikeButtonStyle}"
                 />
 
+            <StackPanel
+                Grid.Row="3"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Margin="2,20,2,2"
+                >
 
+                <TextBlock
+                    HorizontalAlignment="Stretch"
+                    Background="Transparent"
+                    FontFamily="Cascadia Code"
+                    TextWrapping="Wrap"
+                    Padding="0"
+                    Margin="0"
+                    Text="NLO embedding file(s) path depends on solution name. These files are useful for natural language search feature of FreeAIr. FreeAIr will use these embeddings to narrow down the search scope. It is recommended to actualize these files before every commit to keep embeddings in sync with your codebase."
+                    />
+
+                <TextBlock
+                    HorizontalAlignment="Stretch"
+                    Background="Transparent"
+                    FontFamily="Cascadia Code"
+                    TextWrapping="Wrap"
+                    Padding="0"
+                    Margin="0"
+                    Text="Checked tree items will be updated with a new embeddings, unchecked items will reuse the existing embeddings."
+                    />
+
+                <TextBlock
+                    HorizontalAlignment="Stretch"
+                    Background="Transparent"
+                    FontFamily="Cascadia Code"
+                    TextWrapping="Wrap"
+                    Padding="0"
+                    Margin="0"
+                    Text="'NLO extract agent' is an agent to extract natural language outlines from source file. 'Embedding generate agent' is an agent to generate the embeddings from gathered natural language outlines."
+                    />
+                
+            </StackPanel>
+            
 
 
         </Grid>
