Going to NL search with RAG. Step 6.

--- a/FreeAIr/UI/NestedCheckBox/NestedCheckBoxList.xaml
+++ b/FreeAIr/UI/NestedCheckBox/NestedCheckBoxList.xaml
@@ -29,6 +29,7 @@
                             IsChecked="{Binding IsChecked, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             Focusable="False"
                             IsEnabled="{Binding IsEnabled}"
+                            VerticalContentAlignment="Center"
                             >
                             <CheckBox.Foreground>
                                 <PriorityBinding>
